--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </a-marker>
 
       <!-- Cámara -->
-      <a-entity camera></a-entity>
+      <a-entity camera = "fov: 85"></a-entity>
     </a-scene>
   </body>
 </html>
