--- a/index.html
+++ b/index.html
@@ -2,29 +2,68 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Prueba AR con Cubo</title>
+    <title>AR y VR en una sola página</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.0.8/aframe/build/aframe-ar.js"></script>
+    <style>
+      #btnVR {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        padding: 10px 15px;
+        background: rgba(0,0,0,0.6);
+        color: white;
+        border: none;
+        border-radius: 8px;
+        font-size: 16px;
+        cursor: pointer;
+        z-index: 1000;
+      }
+    </style>
   </head>
-  <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs>
-      
-      <!-- Marcador Hiro -->
+  <body style="margin:0; overflow:hidden;">
+
+    <!-- Botón para cambiar a VR -->
+    <button id="btnVR">Entrar a VR</button>
+
+    <!-- Escena AR -->
+    <a-scene id="escenaAR" embedded arjs>
       <a-marker preset="hiro">
-        
-        <!-- Modelo 3D (cubo de prueba) -->
         <a-entity 
           gltf-model="modelos/cubo.glb"
           scale="0.5 0.5 0.5"
           position="0 0 0">
         </a-entity>
-
-        <!-- Texto de referencia -->
-        <a-text value="Cubo de prueba en AR" position="0 1 -2" color="cyan"></a-text>
+        <a-text value="Cubo en AR" position="0 1 -2" color="cyan"></a-text>
       </a-marker>
-
-      <!-- Cámara -->
       <a-entity camera></a-entity>
     </a-scene>
+
+    <!-- Escena VR (oculta al inicio) -->
+    <a-scene id="escenaVR" style="display:none;">
+      <!-- Piso -->
+      <a-plane rotation="-90 0 0" width="20" height="20" color="#7BC8A4"></a-plane>
+
+      <!-- Cielo -->
+      <a-sky color="#ECECEC"></a-sky>
+
+      <!-- Cubo en VR -->
+      <a-box position="0 1 -3" rotation="0 45 0" color="tomato"></a-box>
+
+      <!-- Cámara -->
+      <a-entity camera position="0 1.6 0" wasd-controls look-controls></a-entity>
+    </a-scene>
+
+    <script>
+      const btnVR = document.getElementById("btnVR");
+      const escenaAR = document.getElementById("escenaAR");
+      const escenaVR = document.getElementById("escenaVR");
+
+      btnVR.addEventListener("click", () => {
+        escenaAR.style.display = "none";   // ocultar AR
+        escenaVR.style.display = "block";  // mostrar VR
+        btnVR.style.display = "none";      // ocultar botón
+      });
+    </script>
   </body>
 </html>
