--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <!-- Escena AR -->
     <a-scene id="escenaAR" embedded arjs>
       <a-marker preset="hiro">
+        <!-- En caso de cambiar el modelo cargarlo aqui con la direccion adecuada -->
         <a-entity 
-          gltf-model="modelos/cubo.glb"
+          gltf-model="modelos/cartoon_office.glb"
           scale="0.5 0.5 0.5"
           position="0 0 0">
         </a-entity>
