--- a/index.html
+++ b/index.html
@@ -2,54 +2,80 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>AR y VR en una sola página</title>
+    <title>Presentación VR</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/2.0.8/aframe/build/aframe-ar.js"></script>
     <style>
-      #btnVR {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        padding: 10px 15px;
-        background: rgba(0,0,0,0.6);
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background: linear-gradient(to right, #1c1c1c, #3a3a3a);
         color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      #presentacion {
+        text-align: center;
+        max-width: 600px;
+      }
+      h1 {
+        font-size: 2.5rem;
+        margin-bottom: 20px;
+      }
+      p {
+        font-size: 1.2rem;
+        margin-bottom: 30px;
+      }
+      #btnVR {
+        padding: 12px 25px;
+        background: #007bff;
         border: none;
-        border-radius: 8px;
-        font-size: 16px;
+        border-radius: 10px;
+        color: white;
+        font-size: 18px;
         cursor: pointer;
-        z-index: 1000;
+        transition: background 0.3s;
+      }
+      #btnVR:hover {
+        background: #0056b3;
+      }
+      #escenaVR {
+        display: none;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
       }
     </style>
   </head>
-  <body style="margin:0; overflow:hidden;">
+  <body>
+    <!-- Pantalla de presentación -->
+    <div id="presentacion">
+      <h1>Propuesta de Realidad Virtual</h1>
+      <p>
+        Esta es una demostración de cómo podemos integrar un entorno virtual 
+        para visualizar modelos 3D de manera interactiva.
+      </p>
+      <button id="btnVR">Entrar a la experiencia VR</button>
+    </div>
 
-    <!-- Botón para cambiar a VR -->
-    <button id="btnVR">Entrar a VR</button>
-
-    <!-- Escena AR -->
-    <a-scene id="escenaAR" embedded arjs>
-      <a-marker preset="hiro">
-        <!-- En caso de cambiar el modelo cargarlo aqui con la direccion adecuada -->
-        <a-entity 
-          gltf-model="modelos/cartoon_office.glb"
-          scale="0.5 0.5 0.5"
-          position="0 0 -2">
-        </a-entity>
-        <a-text value="Cubo en AR" position="0 1 -2" color="cyan"></a-text>
-      </a-marker>
-      <a-entity camera></a-entity>
-    </a-scene>
-
-    <!-- Escena VR (oculta al inicio) -->
-    <a-scene id="escenaVR" style="display:none;">
+    <!-- Escena VR -->
+    <a-scene id="escenaVR">
       <!-- Piso -->
       <a-plane rotation="-90 0 0" width="20" height="20" color="#7BC8A4"></a-plane>
 
       <!-- Cielo -->
       <a-sky color="#ECECEC"></a-sky>
 
-      <!-- Cubo en VR -->
-      <a-box position="0 1 -3" rotation="0 45 0" color="tomato"></a-box>
+      <!-- Modelo cargado en VR -->
+      <a-entity 
+        gltf-model="modelos/cartoon_office.glb"
+        scale="0.5 0.5 0.5"
+        position="0 0 -3"
+        rotation="0 45 0">
+      </a-entity>
 
       <!-- Cámara -->
       <a-entity camera position="0 1.6 0" wasd-controls look-controls></a-entity>
@@ -57,13 +83,12 @@
 
     <script>
       const btnVR = document.getElementById("btnVR");
-      const escenaAR = document.getElementById("escenaAR");
+      const presentacion = document.getElementById("presentacion");
       const escenaVR = document.getElementById("escenaVR");
 
       btnVR.addEventListener("click", () => {
-        escenaAR.style.display = "none";   // ocultar AR
-        escenaVR.style.display = "block";  // mostrar VR
-        btnVR.style.display = "none";      // ocultar botón
+        presentacion.style.display = "none"; // Oculta portada
+        escenaVR.style.display = "block";    // Muestra VR
       });
     </script>
   </body>
