--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <!-- Modelo cargado en VR -->
       <a-entity 
-        gltf-model="modelos/cartoon_office.glb"
+        gltf-model="modelos/practica1.glb"
         scale="0.5 0.5 0.5"
         position="0 0 -3"
         rotation="0 45 0">
