--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
       <!-- Modelo cargado en VR -->
       <a-entity 
-        gltf-model="modelos/practica1.glb"
+        gltf-model="modelos/cartoon_office.glb"
         scale="0.5 0.5 0.5"
-        position="0 0 -3"
+        position="0 0 -2"
         rotation="0 45 0">
       </a-entity>
 
